--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
         <h1>Welcome to Tweeter</h1>
         <p>This is a modification to see live updates.</p>
       </div>
+        <h2>test tweet</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
     </main>
   </body>
 </html>
