--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,11 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Create a Tweet</h2>
-        <form action="/tweets/" method="POST">
+        <form class="tweet-form" action="/tweets/" method="POST">
           <label for="tweet-text">What's on your mind today?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div>
-            <button type="submit">Tweet</button>
+          <textarea class="tweet-text" name="text" id="tweet-text"></textarea>
+          <div class="tweet-actions">
+            <button type="submit" class="tweet-button">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
