--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Create a Tweet</h2>
-        <form class="tweet-form" action="/tweets/" method="POST">
+        <form class="new-tweet" action="/tweets/" method="POST">
           <label for="tweet-text">What's on your mind today?</label>
           <textarea class="tweet-text" name="text" id="tweet-text"></textarea>
           <div class="tweet-actions">
