--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <img src="/images/profile-hex.png" alt="Your Profile Picture" />
       </div>
       <div class="your-name">
-        <h2>Your Name</h2>
+        <h2>Amy Mansell</h2>
       </div>
     </header>
 
@@ -67,7 +67,7 @@
       <!-- Tweet container -->
       <section id="tweets-container">
         <!-- Single Tweet -->
-        <article class="tweet">
+        <!-- <article class="tweet">
           <header>
             <div class="profile-pic">
               <img src="/images/avatar.png" alt="User's profile picture" />
@@ -90,7 +90,7 @@
               <i class="fas fa-heart"></i>
             </div>
           </footer>
-        </article>
+        </article> -->
       </section>
     </main>
   </body>
