--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
   
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/timeago.js/4.0.2/timeago.min.js"></script>
   
     <!-- App JS -->
     <script src="/scripts/client.js" defer></script>
