--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
       <section class="new-tweet">
         <h2>Create a Tweet</h2>
         <form class="new-tweet" action="/tweets" method="POST">
+          <div class="error-message" style="display: none;"></div>
           <label for="tweet-text">What's on your mind today?</label>
           <textarea class="tweet-text" name="text" id="tweet-text"></textarea>
           <div class="tweet-actions">
