implement two-column style layout which adapts to screen size changes for mobile and desktop for project resubmission

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
       </div>
     </nav>
 
+<div class="parent">
     <header class="main-header">
       <div class="avatar">
         <img src="/images/profile-hex.png" alt="Your Profile Picture" />
@@ -91,5 +92,6 @@
         </article> -->
       </section>
     </main>
+  </div>
   </body>
 </html>
